--- a/计算机科学/Programming Language Theory (PLT)/【TODO】/逻辑学、范畴论和类型论中，一阶、二阶和三阶.md
+++ b/计算机科学/Programming Language Theory (PLT)/【TODO】/逻辑学、范畴论和类型论中，一阶、二阶和三阶.md
@@ -1,3 +1,4 @@
+[toc]
 在逻辑学、范畴论和类型论中，一阶、二阶和三阶的概念分别表示不同层次的抽象和复杂性。以下是对一阶、二阶和三阶逻辑、范畴和类型的详细解释。
 
 ### 一阶逻辑（First-order Logic）
@@ -146,3 +147,85 @@
 | System F(λ2)            | 纯二阶逻辑         |
 | 依赖类型(λP)            | 一阶逻辑           |
 | 构造演算(λC)            | 高阶逻辑           |
+
+### ---------------------
+
+### 一阶逻辑与二阶逻辑的概念
+
+#### **一阶逻辑 (First-Order Logic, FOL)**
+
+**一阶逻辑**是一种形式逻辑系统，用于描述和推理对象及其关系。它有以下主要特点：
+- **量化范围**：量词（如 ∀，∃）只能作用于个体变量（即对象）。例如，"对于所有的 $x$" 或 "存在一个 $x$"。
+- **命题**：命题是由个体常量、变量、函数符号、谓词符号和逻辑连接词（如∧, ∨, →, ¬）构成的。
+- **表达能力**：一阶逻辑可以表达诸如 "所有人都是凡人" 这样涉及个体对象的命题。
+
+**示例**：
+- ∀x (Human(x) → Mortal(x)) 表示 "所有的人都是凡人"。
+- ∃y (Cat(y) ∧ Black(y)) 表示 "存在一只黑猫"。
+
+#### **二阶逻辑 (Second-Order Logic, SOL)**
+
+**二阶逻辑**是对一阶逻辑的扩展，它允许量词作用于谓词（关系）或函数，而不仅仅是个体变量：
+- **量化范围**：量词不仅可以作用于个体变量，还可以作用于谓词（如 "对于所有的属性 $P$"）或函数（如 "对于所有的函数 $f$"）。
+- **表达能力**：二阶逻辑可以表达涉及集合、关系的更复杂的命题。例如，可以表达 "每个非空集合都有一个最大元素" 这样的命题。
+
+**示例**：
+- ∀P (P(x) ∧ ∀y (P(y) → y = x)) 表示 "存在一个唯一的 $x$ 满足某种性质 $P$"。
+
+#### **阶的概念**
+
+在逻辑中，“阶”指的是量词可以作用的对象的层次：
+- **一阶**：量词只能作用于个体（如对象）。
+- **二阶**：量词可以作用于集合或关系。
+- **三阶**（及更高阶）：量词可以作用于集合的集合，或者关系的关系，依此类推。
+
+**三阶逻辑**和更高阶逻辑的推理能力更强，但也更复杂，且在某些情况下会失去如“紧致性”或“完全性”等一阶逻辑中具有的性质。
+
+### **命题逻辑**
+
+**命题逻辑 (Propositional Logic)** 是最基础的逻辑系统，它的特点是：
+- **命题符号**：最基本的元素是命题符号（如 $P, Q, R$），它们可以是独立的陈述句或断言。
+- **逻辑连接词**：通过逻辑连接词（如∧, ∨, →, ¬）构成复杂的命题。
+- **推理规则**：基于这些命题符号和逻辑连接词进行推理。
+  
+
+命题逻辑不涉及对象、谓词或量词。它只处理命题与命题之间的逻辑关系，类似于“真”和“假”之间的推导。
+
+**示例**：
+- (P ∧ Q) → P 表示 "如果 $P$ 和 $Q$ 都为真，那么 $P$ 为真"。
+
+### **命题逻辑与阶逻辑的结合**
+
+- **一阶命题逻辑**：结合一阶逻辑和命题逻辑，可以推导出包含个体和命题的逻辑表达式。例如，一阶命题逻辑中可以有命题作为参数的谓词。
+- **二阶命题逻辑**：结合二阶逻辑和命题逻辑，可以处理涉及命题、个体以及命题之间关系的表达式。
+
+### **其他逻辑**
+
+除了一阶和二阶逻辑，逻辑学中还有许多其他种类的逻辑系统：
+
+1. **模态逻辑 (Modal Logic)**：处理可能性和必然性等概念。常见的有 "可能是" (◇) 和 "必须是" (□) 的表示。
+   
+2. **时态逻辑 (Temporal Logic)**：处理时间因素的逻辑系统，用于描述在时间上的变化，例如 "将来某个时候" (◇) 或 "始终" (□)。
+
+3. **直觉逻辑 (Intuitionistic Logic)**：不承认经典逻辑中的排中律（即 P ∨ ¬P 总为真），更接近构造主义数学中的推理方式。
+
+4. **模糊逻辑 (Fuzzy Logic)**：处理不确定性或模糊概念的逻辑系统，允许命题有一个介于0和1之间的真值。
+
+5. **非单调逻辑 (Non-Monotonic Logic)**：允许结论在新信息引入后被撤销或修正。
+
+6. **线性逻辑 (Linear Logic)**：强调资源的使用，避免命题的重复使用。
+
+7. **多值逻辑 (Multi-Valued Logic)**：允许命题有多于两个真值，如“真”、“假”、“未知”等。
+
+### **总结**
+
+- **命题逻辑**：处理基本的命题和它们之间的关系，不涉及对象或谓词。
+- **一阶逻辑**：量词作用于个体，处理对象及其关系。
+- **二阶逻辑**：量词可以作用于谓词或函数，表达更复杂的性质和关系。
+- **高阶逻辑**：进一步扩展，允许量词作用于更高层次的对象，如集合的集合。
+  
+
+这些逻辑系统从简单到复杂，为我们提供了强大的工具来描述和推理各种数学、计算机科学以及哲学中的概念。
+
+### --------------------
+
