--- a/计算机科学/Programming Language Theory (PLT)/【TODO】/类型论涉及许多逻辑系统.md
+++ b/计算机科学/Programming Language Theory (PLT)/【TODO】/类型论涉及许多逻辑系统.md
@@ -47,7 +47,72 @@
 
 ---
 
+**First-Order Logic（FOL）**，也称为一阶逻辑，是一种用于描述和推理对象、属性和它们之间关系的形式系统。它在数学、计算机科学、逻辑学等领域有着广泛的应用。FOL 是一种强大的逻辑工具，相对于命题逻辑，它能够表达更复杂的概念和推理。
+
+### 1. **基本概念**
+
+- **对象**：FOL 中的基本元素，通常表示为变量。例如，$x$, $y$, $z$。
+- **谓词（Predicates）**：描述对象的属性或关系。例如，$P(x)$ 表示对象 $x$ 满足某种属性 $P$；$R(x, y)$ 表示对象 $x$ 和 $y$ 之间存在某种关系 $R$。
+- **函数符号（Function symbols）**：从对象到对象的映射。例如，$f(x)$ 表示一个从对象 $x$ 得到另一个对象的函数。
+- **量词（Quantifiers）**：
+  - **全称量词**（Universal Quantifier）：$\forall x.P(x)$，表示“对所有对象 $x$，$P(x)$ 成立”。
+  - **存在量词**（Existential Quantifier）：$\exists x.P(x)$，表示“存在至少一个对象 $x$，使得 $P(x)$ 成立”。
+
+### 2. **语法**
+
+FOL 的语法定义了如何构造合法的公式。主要包括以下部分：
+
+- **项（Terms）**：可以是变量、常量或函数应用。例如，$x$, $a$, $f(x)$。
+- **原子公式（Atomic Formulae）**：由谓词应用于项构成。例如，$P(x)$, $R(x, y)$。
+- **公式（Formulas）**：可以是原子公式，也可以是通过逻辑连接词（如 $\neg$, $\land$, $\lor$, $\rightarrow$, $\leftrightarrow$）和量词组合得到的更复杂的表达式。
+
+公式的例子：
+- $P(x) \rightarrow Q(y)$
+- $\forall x (P(x) \rightarrow Q(x))$
+- $\exists y (R(x, y) \land P(y))$
+
+### 3. **语义**
+
+FOL 的语义定义了如何解释公式，特别是如何判断一个公式在某个解释下是否为真。主要涉及以下概念：
+
+- **域（Domain）**：一组对象，它们是变量可以取的值。通常记为 $D$。
+- **解释（Interpretation）**：将常量、函数符号、谓词符号映射到具体的对象、函数和关系上。例如，将 $P(x)$ 解释为 $P(x)$ 是否为真。
+- **满足（Satisfaction）**：在一个解释和变量赋值下，一个公式为真。记为 $\mathcal{I}, \sigma \models \phi$，表示解释 $\mathcal{I}$ 和变量赋值 $\sigma$ 使公式 $\phi$ 为真。
+
+### 4. **推理规则**
+
+FOL 包含一套推理规则，用于从一个或多个前提推导出结论。这些规则包括：
+
+- **模式规则（Modus Ponens）**：从 $\phi$ 和 $\phi \rightarrow \psi$ 推导出 $\psi$。
+- **全称量词消去**：从 $\forall x \phi(x)$ 推导出 $\phi(a)$，其中 $a$ 是任意项。
+- **存在量词引入**：从 $\phi(a)$ 推导出 $\exists x \phi(x)$，其中 $a$ 是任意项。
+
+### 5. **FOL 的应用**
+
+FOL 是许多逻辑系统和形式化方法的基础，包括：
+
+- **数学定理证明**：FOL 是形式化数学定理证明的基础，许多数学公理系统都是在 FOL 的框架下构建的。
+- **人工智能**：在知识表示和自动推理中，FOL 被广泛应用于描述知识和进行推理。
+- **编程语言理论**：FOL 用于定义程序的形式语义，证明程序的正确性。
+
+### 6. **FOL 与其他逻辑的关系**
+
+- **命题逻辑（Propositional Logic）**：FOL 是命题逻辑的扩展。在命题逻辑中，命题符号没有内部结构，而在 FOL 中，命题符号是可以分解的，涉及到对象和它们之间的关系。
+- **高阶逻辑（Higher-Order Logic, HOL）**：FOL 只能量化对象，而高阶逻辑允许对函数和谓词进行量化，从而更强大，但也更复杂。
+
+### 7. **FOL 的局限性**
+
+尽管 FOL 是一个强大的逻辑系统，但它有一些局限性：
+
+- **表达能力有限**：某些复杂的数学结构和概念（如集合论中的某些概念）需要高阶逻辑来表达。
+- **不可判定性**：FOL 的推理问题是不可判定的，即不存在一个通用算法可以在有限时间内确定所有 FOL 公式的有效性。
+
+总结来说，First-Order Logic 是一个非常强大的逻辑系统，广泛应用于数学、计算机科学和逻辑学中，作为描述和推理对象及其关系的基础工具。
+
+### ----------------------------------
+
 ### 二阶逻辑（Second-order Logic, SOL）
+
 二阶逻辑引入了对**谓词和函数**的量化，可以处理属性的属性。
 
 #### 量词符号
