--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Essentials of Programming Languages》/①/7 类型.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Essentials of Programming Languages》/①/7 类型.md
@@ -725,6 +725,107 @@ proc (x) x
 
 
 
+### 7.2 赋予表达值类型（Assigning Types to Expression Values）
+
+在这一节中，我们探讨如何为表达式赋予类型，以预测程序的行为。其核心思想是通过**类型推导 (type inference)** 来分析表达式，并为其分配类型。
+
+#### 问题背景
+
+在程序设计中，**类型 (type)** 是对值的分类，通过类型，我们可以确保程序运行时能避免一些常见的错误。类型系统的主要目的是通过静态分析预测程序中的错误。例如，防止把一个整数变量当作布尔值来使用。
+
+### 类型推导的目标
+
+我们的目标是实现一个名为 `type-of` 的过程，它接受一个表达式 $exp$ 和一个类型环境 $tenv$，并返回一个表达式的类型 $t$。这个类型推导过程的规范如下：
+
+- 如果在环境中每个变量的类型都由 $tenv$ 指定，则：
+  - 表达式求值的结果类型为 $t$，或
+  - 表达式的求值不终止，或
+  - 求值因类型错误之外的原因失败。
+
+#### 类型的正常性与异常性
+
+- **正常类型 (Well-typed)**：如果我们能为表达式推导出类型，则称该表达式具有正常类型。
+- **异常类型 (Ill-typed)**：如果表达式无法推导出类型，则称其为异常类型，或者说该表达式是无类型的。
+
+### 基本类型推导规则
+
+类型推导基于以下原则：如果我们能预测表达式中所有子表达式的类型，就能预测整个表达式的类型。这种递归结构是类型推导的基础。
+
+#### 规则 1：常量和变量
+
+对于简单的常量和变量，我们有以下规则：
+1. 如果表达式是一个常量，如整数：
+   $$ \text{type-of}(\text{const-exp num}, \text{tenv}) = \text{int} $$
+   解释：整数常量的类型是 $int$，不需要进一步推导。
+
+2. 如果表达式是一个变量：
+   $$ \text{type-of}(\text{var-exp var}, \text{tenv}) = \text{tenv(var)} $$
+   解释：变量的类型可以从类型环境 $tenv$ 中直接查找得到。
+
+#### 规则 2：条件表达式与布尔操作
+
+1. 如果表达式是 $zero?$ 判断：
+   $$ \text{type-of}(\text{zero?-exp exp1}, \text{tenv}) = \text{bool} $$
+   解释：$zero?-exp$ 判断的表达式 $exp1$ 的类型必须是 $int$，且返回的类型是 $bool$。
+
+2. 如果表达式是条件表达式：
+   $$ \text{type-of}(\text{if-exp exp1 exp2 exp3}, \text{tenv}) = t $$
+   解释：
+   - $exp1$ 必须是布尔值 $bool$；
+   - $exp2$ 和 $exp3$ 的类型必须相同 $t$；
+   - 最终条件表达式的类型也是 $t$。
+
+#### 规则 3：算术运算
+
+1. 如果表达式是差值运算：
+   $$ \text{type-of}(\text{diff-exp exp1 exp2}, \text{tenv}) = \text{int} $$
+   解释：差值运算要求 $exp1$ 和 $exp2$ 的类型必须都是 $int$，返回值类型也是 $int$。
+
+#### 规则 4：过程表达式和过程调用
+
+1. 如果表达式是一个过程声明：
+   $$ \text{type-of}(\text{proc-exp var body}, \text{tenv}) = t1 \to t2 $$
+   解释：
+   - 对于过程表达式，首先需要为变量 $var$ 分配一个类型 $t1$；
+   - 然后，推导过程体 $body$ 的类型为 $t2$；
+   - 最终该过程的类型为 $t1 \to t2$，表示接受类型为 $t1$ 的参数，返回类型为 $t2$ 的结果。
+
+2. 如果表达式是过程调用：
+   $$ \text{type-of}(\text{call-exp rator rand}, \text{tenv}) = t2 $$
+   解释：
+   - 推导操作符 $rator$ 的类型为 $t1 \to t2$；
+   - 推导操作数 $rand$ 的类型为 $t1$；
+   - 过程调用的结果类型为 $t2$。
+
+### 挑战：过程的参数类型推导
+
+到目前为止，我们已经推导了基本的表达式类型。然而，对于过程，我们遇到了一个问题：在推导过程类型时，如何得知参数的类型 $t1$？这个类型通常在过程体中是未知的。
+
+**解决方案**：
+- **类型环境 (Type Environment)**：我们可以在类型环境中引入一个新的绑定，将过程参数映射到一个推测的类型。
+- **类型推断 (Type Inference)**：通过从表达式上下文中推断出参数的类型。这种推断依赖于其他子表达式的类型推导结果。
+
+#### 示例代码：
+
+假设有一个求差值的表达式：
+```scheme
+(diff-exp (const-exp 5) (const-exp 3))
+```
+根据上述规则推导该表达式的类型：
+
+1. 首先，推导每个常量的类型：
+   $$ \text{type-of}(\text{const-exp 5}, \text{tenv}) = \text{int} $$
+   $$ \text{type-of}(\text{const-exp 3}, \text{tenv}) = \text{int} $$
+
+2. 然后，根据差值运算规则：
+   $$ \text{type-of}(\text{diff-exp} \text{(const-exp 5) (const-exp 3)}, \text{tenv}) = \text{int} $$
+
+因此，整个表达式的类型是 $int$。
+
+### 总结
+
+在这一节中，我们学习了如何通过递归地推导表达式中每个子表达式的类型，来预测整个表达式的类型。通过类型推导，我们可以确保程序在运行时避免类型错误，或者能够静态发现潜在的错误。
+
 ### -----------------------------------------
 
 
