--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Essentials of Programming Languages》/①/7 类型.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Essentials of Programming Languages》/①/7 类型.md
@@ -6,6 +6,72 @@
 
 ### -----------------------------------------
 
+### 第7章：类型系统概述
+
+本章介绍了**类型系统**在编程语言中的重要性，着重探讨如何为表达式赋予类型、如何进行类型检查，以及如何通过类型推导来自动推断表达式的类型。
+
+### 7.1 值及其类型
+
+值和类型是编程语言的核心概念。类型定义了值的性质和它们允许的操作。对于不同的编程语言，类型系统可以防止不合理的操作（如将整数加到字符串上），并帮助程序员避免运行时错误。
+
+- **值**：编程中的所有数据（例如整数、布尔值、函数等）。
+- **类型**：为每个值提供一个抽象描述。例如，整数值有 `int` 类型，布尔值有 `bool` 类型。类型系统通过为每个值赋予类型来确保代码的正确性。
+
+类型系统的主要目标是保证程序的行为与其设计预期一致，即确保**类型安全性**。
+
+### 7.2 赋予表达值类型
+
+在任何编程语言中，表达式会产生值，而类型系统的任务是为这些表达式赋予相应的类型。这一过程称为**类型检查**。具体来说，给定一个表达式，我们需要判断它的类型是否正确并与操作符的要求一致。
+
+例如，考虑以下示例：
+
+- 表达式 `1 + 2` 是类型正确的，因为 `+` 操作符要求两个整数作为操作数，而 `1` 和 `2` 都是整数。
+- 表达式 `1 + "hello"` 是类型不正确的，因为整数不能与字符串相加。
+
+类型检查的过程可以归纳为：给定一个表达式和当前的上下文（如环境），确定该表达式的类型。如果该类型与预期不符，则抛出类型错误。
+
+### 7.3 CHECKED：带有类型检查的语言
+
+**CHECKED** 是一种假设的编程语言，它在运行时之前进行类型检查。通过静态检查机制，程序在编译时被验证为类型安全。类型检查确保每个表达式在计算时能够正确产生预期的值。
+
+#### 7.3.1 检查器
+
+类型检查器是类型系统的核心组件。它通过递归遍历程序的抽象语法树（AST），为每个表达式分配类型。检查器的主要职责是：
+- 确保操作数与操作符的类型兼容。
+- 维护环境，以便为变量和函数提供类型信息。
+
+类型检查器通常使用递归下降的方式，对每个表达式进行检查并返回其类型。若某个表达式类型不匹配，则抛出错误。
+
+### 7.4 INFERRED：带有类型推导的语言
+
+**INFERRED** 是另一种假设的编程语言，它采用**类型推导**（或类型推断）机制，允许程序员不显式声明变量或函数的类型。编译器会通过分析程序自动推断出每个表达式的类型。
+
+类型推导的优点是减少了程序员的工作量，同时确保程序在编译时仍然具有类型安全性。
+
+#### 7.4.1 代换式
+
+类型推导的基本原理是通过**代换**。每个表达式都有一个类型变量，编译器通过分析表达式中的操作和操作数来替换这些类型变量，逐步得出表达式的具体类型。
+
+举例来说，对于函数 `f(x) = x + 1`，我们不知道 `x` 的具体类型，但通过 `+` 操作符，我们可以推导出 `x` 必须是整数。因此，`x` 的类型推导为 `int`，并且返回值也为 `int`。
+
+#### 7.4.2 合一器
+
+类型推导使用**合一**（unification）算法来确保类型之间的一致性。合一器的作用是比较两个类型表达式，并试图通过代换将它们匹配。如果匹配成功，表示它们是兼容的；如果不成功，则抛出类型错误。
+
+合一算法通过递归的方式逐层检查类型表达式的各个部分，找到变量之间的相互关系。例如，`int -> T` 和 `int -> bool` 可以通过合一得到 `T = bool`，而 `int -> T` 和 `bool -> T` 则无法合一，导致类型不匹配。
+
+#### 7.4.3 找出表达式的类型
+
+类型推导器的最终任务是找到每个表达式的具体类型。编译器从程序的输入和操作中推导出每个子表达式的类型，并合成这些类型来推导整个表达式的类型。如果在推导过程中发现类型不一致，则抛出错误。
+
+通过自动类型推导，程序员无需显式声明类型，编译器会为他们处理类型推断的复杂性。这使得编程更加灵活，同时保留了类型安全的优势。
+
+### 小结
+
+第7章讨论了**类型系统**在编程语言中的作用，并引入了两种实现策略：**类型检查**和**类型推导**。类型系统通过为表达式赋予正确的类型来确保程序的安全和正确性。对于**类型检查**的语言，程序员需要手动指定每个表达式的类型，而**类型推导**则允许编译器自动推断出类型，简化了程序的编写。
+
+### -------------------------------------
+
 第 7 章讨论了 **类型 (types)** 在编程语言中的重要性，尤其是如何通过类型分析来确保程序的安全性。通过静态分析，解释器能够预测程序在运行时是否会产生类型错误，这为程序的正确性提供了额外的保障。下面是本章关键内容的逐步讲解。
 
 ### 1. **类型的定义及其重要性**
@@ -828,19 +894,430 @@ proc (x) x
 
 ### -----------------------------------------
 
+### 7.2 赋予表达值类型
 
+本节探讨如何为表达式赋予类型，并且描述了如何通过**类型推导**或**类型检查**来推断程序中的表达式类型。主要目标是实现一个过程 `type-of`，它通过解析表达式，结合类型环境（`tenv`），为每个表达式推断出正确的类型。 
+
+类型环境 `tenv` 是一个映射，用来将程序中的变量映射到它们的类型。通过这一映射，`type-of` 可以判断表达式中的每个变量及其类型。最终目标是为每个表达式赋予一个类型，或者发现它是无类型的（即类型错误）。
+
+#### **类型系统中的推理规则**
+
+我们通过为每个表达式编写推理规则来构建类型推导过程。推理规则告诉我们，在给定环境下，如何推导出表达式的类型。这些推理规则可以被编程实现，形成类型推导的基础。
+
+### 1. **简单判类规则**
+
+这些规则用于推导简单表达式的类型，如常量、变量、条件语句、差分表达式（如减法）等。以下是一些常见的类型推导规则：
+
+1. **常量表达式**：
+   - 常量表达式的类型是 `int`，不论上下文如何。
+     ```scheme
+     (type-of (const-exp num) tenv) = int
+     ```
+
+2. **变量表达式**：
+   - 变量的类型取决于它在类型环境中的绑定。
+     ```scheme
+     (type-of (var-exp var) tenv) = tenv(var)
+     ```
+
+3. **零判断表达式**（如 `zero?`）：
+   - `zero?` 操作符的参数必须是整数，并且它的返回值类型为布尔型 `bool`。
+     ```scheme
+     (type-of exp1 tenv) = int
+     (type-of (zero?-exp exp1) tenv) = bool
+     ```
+
+4. **差分表达式**（如减法 `-`）：
+   - 两个表达式的类型必须都是 `int`，返回值的类型也为 `int`。
+     ```scheme
+     (type-of exp1 tenv) = int
+     (type-of exp2 tenv) = int
+     (type-of (diff-exp exp1 exp2) tenv) = int
+     ```
+
+5. **条件表达式**（如 `if`）：
+   - `if` 表达式的第一个分支必须为布尔值，第二个和第三个分支必须具有相同的类型，并且 `if` 表达式的返回类型是第二个和第三个分支的类型。
+     ```scheme
+     (type-of exp1 tenv) = bool
+     (type-of exp2 tenv) = t
+     (type-of exp3 tenv) = t
+     (type-of (if-exp exp1 exp2 exp3) tenv) = t
+     ```
+
+6. **过程调用**：
+   - 过程调用的操作符类型应为 `t1 → t2`，参数类型应为 `t1`，返回值的类型为 `t2`。
+     ```scheme
+     (type-of rator tenv) = t1 → t2
+     (type-of rand tenv) = t1
+     (type-of (call-exp rator rand) tenv) = t2
+     ```
+
+### 2. **let表达式**
+
+在 `let` 表达式中，我们可以引入新的变量绑定，并对新的变量赋值。在这个过程中，我们可以推导出整个 `let` 表达式的类型：
+
+```scheme
+(type-of exp1 tenv) = t1
+(type-of body [var=t1]tenv) = t2
+(type-of (let-exp var exp1 body) tenv) = t2
+```
+
+这里，`exp1` 是表达式 `var` 的初始值，`body` 是在新环境下（包含 `var=t1` 的映射）计算的表达式，返回 `t2` 类型。
+
+### 3. **过程表达式**
+
+对于过程表达式 `proc(var) body`，其类型为 `t1 → t2`，其中 `t1` 是参数 `var` 的类型，`t2` 是过程体 `body` 的类型。为了推导出过程的类型，我们需要以下规则：
+
+```scheme
+(type-of body [var=t1]tenv) = t2
+(type-of (proc-exp var body) tenv) = t1 → t2
+```
+
+### 类型检查 vs 类型推导
+
+为了处理变量绑定和类型推导问题，本节提出了两种常见的设计方法：
+
+1. **类型检查 (Type Checking)**：
+   - 程序员显式声明变量和参数的类型，类型检查器检查这些类型是否一致。类型检查器根据已知类型信息验证程序的正确性。
+   
+2. **类型推导 (Type Inference)**：
+   - 程序员不需要显式声明变量和参数的类型。类型推导系统通过表达式的上下文推断出所有的类型。这种方法能使代码更加简洁，因为不需要重复声明类型。
+
+### **实现`type-of`的步骤**
+
+1. **定义类型环境**：
+   类型环境 `tenv` 用于追踪每个变量的类型。`tenv` 是一个将变量映射到类型的哈希表或列表。
+
+2. **递归实现`type-of`**：
+   我们通过递归遍历表达式来判断每个子表达式的类型。例如，在 `if` 表达式中，先判断条件表达式的类型是否为 `bool`，再分别判断两个分支表达式的类型是否相同。
+
+3. **扩展环境**：
+   每当遇到新的变量绑定时（如在 `let` 或函数定义中），我们需要扩展环境 `tenv`，将新变量映射到它的类型。
+
+4. **处理类型错误**：
+   在遇到类型不匹配的情况下，`type-of` 函数应返回错误信息。
+
+### 小结
+
+通过为表达式赋予类型并定义推导规则，程序可以在编译期验证其类型正确性。`type-of` 函数是类型推导的核心，它使用递归的方式，结合类型环境来预测和验证程序的类型。通过两种方式——**类型检查**和**类型推导**，我们可以确保程序的类型安全性。
 
 ### -----------------------------------------
 
+### 解答：练习 7.4
 
+本练习要求根据本节的类型推导规则，为两个过程表达式 `proc(x) x` 和 `proc(x) (x y)` 写出类型推导，并且为每个表达式赋予至少两种类型。
+
+#### 1. **`proc(x) x` 的类型推导**
+
+我们先从表达式 `proc(x) x` 开始。根据推导规则，函数的返回类型取决于其体的类型。在这个例子中，函数体仅仅是变量 `x`，所以我们将根据 `x` 的类型来推导出整个表达式的类型。
+
+##### 推导步骤：
+
+1. **定义表达式和规则**：
+   - 这个表达式是一个过程表达式，因此我们应用过程表达式的推导规则：
+     ```
+     (type-of (proc-exp x body) tenv) = t1 → t2
+     ```
+
+2. **推导 `x` 的类型**：
+   - 在函数体 `x` 中，变量 `x` 的类型 `t1` 是未知的，因此我们用类型变量 `t1` 来表示。
+   - 根据规则：
+     ```
+     (type-of (var-exp x) tenv) = t1
+     ```
+
+3. **推导 `proc(x) x` 的类型**：
+   - `proc(x)` 的返回类型与 `x` 的类型一致，即 `t2 = t1`，因此这个表达式的类型为 `t1 → t1`。
+
+##### 可能的类型：
+
+- **第一种类型**：假设 `x` 是整数类型，则 `t1 = int`。根据推导规则，`proc(x) x` 的类型为 `int → int`。
+  
+- **第二种类型**：假设 `x` 是布尔类型，则 `t1 = bool`。根据推导规则，`proc(x) x` 的类型为 `bool → bool`。
+
+#### 2. **`proc(x) (x y)` 的类型推导**
+
+接下来推导表达式 `proc(x) (x y)`。在这个表达式中，`x` 是一个变量，并且作为函数来调用参数 `y`。这意味着 `x` 必须是一个函数，并且它的参数类型和返回类型都需要被推导出来。
+
+##### 推导步骤：
+
+1. **定义表达式和规则**：
+   - 这是一个过程表达式，我们依然使用过程表达式的推导规则：
+     ```
+     (type-of (proc-exp x body) tenv) = t1 → t2
+     ```
+   - 函数体为 `(x y)`，这是一个函数调用，因此我们需要根据函数调用的推导规则来推导 `x` 的类型。
+
+2. **推导 `x` 的类型**：
+   - 根据规则：
+     ```
+     (type-of (call-exp rator rand) tenv) = t2
+     ```
+     其中 `rator` 是被调用的函数，`rand` 是参数。在本例中，`x` 是被调用的函数，而 `y` 是参数。
+   - 设 `x` 的类型为 `t1 → t2`，即 `x` 是一个接受类型 `t1` 的参数并返回类型 `t2` 的函数。`y` 的类型是 `t1`，因此函数调用 `(x y)` 的结果类型是 `t2`。
+
+3. **推导 `proc(x) (x y)` 的类型**：
+   - 我们知道 `x` 的类型是 `t1 → t2`，因此 `proc(x)` 的返回类型是 `t2`。
+   - 总的来说，`proc(x) (x y)` 的类型为 `(t1 → t2) → t2`，其中 `y` 的类型是 `t1`。
+
+##### 可能的类型：
+
+- **第一种类型**：假设 `x` 是一个从整数到布尔值的函数，即 `x: int → bool`，并且 `y` 是整数，则 `proc(x) (x y)` 的类型为 `(int → bool) → bool`。
+  
+- **第二种类型**：假设 `x` 是一个从布尔值到整数的函数，即 `x: bool → int`，并且 `y` 是布尔值，则 `proc(x) (x y)` 的类型为 `(bool → int) → int`。
+
+#### 3. **这两个表达式的值类型相同吗？**
+
+从上述推导中可以看到，`proc(x) x` 和 `proc(x) (x y)` 的类型是不同的：
+
+- `proc(x) x` 的类型是 `t1 → t1`，它是一个恒等函数，返回的类型与参数类型相同。
+- `proc(x) (x y)` 的类型是 `(t1 → t2) → t2`，它是一个更复杂的函数，它接受一个函数作为参数并返回该函数的结果。
+
+因此，这两个表达式的值类型**不相同**。
 
 ### -----------------------------------------
 
+### 7.3 CHECKED: 带有类型检查的语言
 
+这一节介绍了一种带有**类型检查**（type checking）的语言 **CHECKED**。在这种语言中，程序员需要为所有绑定的变量显式地提供类型。这意味着每当你定义一个变量或者过程时，必须指明该变量的类型（例如 `int`, `bool`, `(int -> int)`）。类型检查器将验证这些类型信息，确保每个表达式的类型一致并符合预期。
+
+#### **类型检查的重要性**
+
+类型检查有助于在编译时发现潜在的类型错误，这样在运行时可以避免程序崩溃或不正确的行为。在 CHECKED 语言中，程序员必须明确指定绑定变量的类型。尤其是在使用递归绑定（如 `letrec`）时，程序员还需要提供过程的返回类型。
+
+#### **例子 1: 基本的过程类型声明**
+
+```scheme
+proc (x : int) -(x,1)
+```
+
+这段代码定义了一个过程 `proc`，它接受一个整数 `x`，并返回 `x - 1`。在这里，`x` 的类型是 `int`，整个过程的类型是 `int -> int`，表示这个过程输入一个整数，返回一个整数。
+
+#### **例子 2: 带有递归的类型声明**
+
+```scheme
+letrec
+  int double (x : int) = if zero?(x)
+                         then 0
+                         else -((double -(x,1)), -2)
+in double
+```
+
+这个 `letrec` 表达式定义了一个递归过程 `double`，它接受一个整数 `x`，并根据 `x` 是否为零进行递归。`double` 过程的返回类型是 `int`，但 `double` 本身的类型是 `(int -> int)`，表示它接受一个整数并返回一个整数。
+
+#### **例子 3: 传递函数作为参数**
+
+```scheme
+proc (f : (bool -> int)) proc (n : int) (f zero?(n))
+```
+
+在这个例子中，定义了一个过程 `proc`，它接受一个类型为 `bool -> int` 的函数 `f` 作为参数，并返回另一个过程。这个返回的过程接受一个整数 `n`，并调用 `f` 来处理 `zero?(n)`。这里，`f` 的类型是 `(bool -> int)`，`n` 的类型是 `int`，整个表达式的类型是 `int -> int`。
+
+### **CHECKED 语言的语法与类型推导规则**
+
+为了支持类型检查，需要扩展 **CHECKED** 语言的语法。尤其是在 `proc` 和 `letrec` 表达式中，要求程序员显式提供类型信息。让我们分别看看这两种表达式的推导规则。
+
+#### **1. `proc` 表达式的推导规则**
+
+`proc` 表达式需要绑定变量的类型（例如 `proc (x : int)`）。为了推导 `proc` 表达式的类型，我们遵循以下规则：
+
+```scheme
+(type-of body [var=tvar]tenv) = tres
+(type-of (proc-exp var tvar body) tenv) = tvar → tres
+```
+
+- `tvar` 是参数 `var` 的类型。
+- `tres` 是过程体 `body` 的类型。
+- `proc` 表达式的类型是 `tvar → tres`，表示它接受类型 `tvar` 的参数并返回类型 `tres` 的值。
+
+#### **2. `letrec` 表达式的推导规则**
+
+`letrec` 表达式用于递归过程的定义。它声明了一个递归过程 `p`，这个过程有一个参数 `var`，类型为 `tvar`，并且返回类型为 `tres`。推导 `letrec` 的类型需要将过程名 `p` 和参数 `var` 的类型添加到类型环境中，然后检查过程体和 `letrec` 表达式的其他部分。
+
+以下是推导 `letrec` 的完整规则：
+
+```scheme
+(type-of eproc-body [var=tvar] [p=(tvar → tres)] tenv) = tres
+(type-of eletrec-body [p=(tvar → tres)] tenv) = t
+(type-of (letrec-exp tres p (var : tvar) = eproc-body in eletrec-body) tenv) = t
+```
+
+- `eproc-body` 是过程 `p` 的函数体，在检查它时，类型环境 `tenvproc-body` 包含 `var` 和 `p` 的类型绑定。
+- `eletrec-body` 是 `letrec` 的主体，在检查它时，类型环境包含 `p` 的类型。
+- 整个 `letrec` 表达式的类型是 `t`，即 `eletrec-body` 的类型。
+
+### **实现类型检查器**
+
+有了这些推导规则之后，我们就可以实现 CHECKED 语言的类型检查器了。该类型检查器的任务是遍历程序中的每个表达式，并根据表达式的形式和类型环境为其赋予正确的类型。
+
+```scheme
+(define type-of
+  (lambda (exp tenv)
+    (cond
+      ;; 常量表达式
+      ((const-exp? exp) 'int)
+
+      ;; 变量表达式
+      ((var-exp? exp)
+       (lookup (var-exp-var exp) tenv))
+
+      ;; proc 表达式
+      ((proc-exp? exp)
+       (let ((var (proc-exp-var exp))
+             (var-type (proc-exp-var-type exp))
+             (body (proc-exp-body exp)))
+         (let ((body-type (type-of body (extend-tenv var var-type tenv))))
+           (arrow-type var-type body-type))))
+
+      ;; letrec 表达式
+      ((letrec-exp? exp)
+       (let* ((p (letrec-exp-p exp))
+              (var (letrec-exp-var exp))
+              (var-type (letrec-exp-var-type exp))
+              (proc-body (letrec-exp-proc-body exp))
+              (body (letrec-exp-body exp))
+              (proc-type (arrow-type var-type (type-of proc-body (extend-tenv var var-type (extend-tenv p proc-type tenv))))))
+         (type-of body (extend-tenv p proc-type tenv))))
+
+      ;; 其他表达式...
+      (else (error "Unsupported expression")))))
+```
+
+### **详细解释代码**
+
+1. **常量表达式**：
+   - 如果是常量表达式 `const-exp`，返回 `int` 类型，因为常量总是整数。
+   
+2. **变量表达式**：
+   - 对于变量表达式 `var-exp`，从类型环境 `tenv` 中查找该变量的类型。
+
+3. **`proc` 表达式**：
+   - 首先获取 `proc` 表达式的参数类型 `var-type` 和过程体 `body`。
+   - 递归调用 `type-of`，在扩展的类型环境中推导 `body` 的类型。
+   - 返回 `tvar → tres` 类型，表示 `proc` 的输入和输出类型。
+
+4. **`letrec` 表达式**：
+   - `letrec` 表达式首先需要推导递归过程的类型。在推导 `proc-body` 的类型时，需要扩展环境 `tenv`，将 `p` 和 `var` 的类型加入其中。
+   - 递归调用 `type-of` 检查过程体的类型和 `letrec` 主体的类型。
+
+通过这些规则和代码，CHECKED 语言实现了静态的类型检查机制，保证在编译期捕捉到可能的类型错误。
+
+---
+
+这个类型检查系统展示了如何通过**推导规则**和**类型环境**来对程序进行静态验证。这种类型检查机制帮助程序员编写类型安全的代码，并且在实际编译前就能发现潜在的错误。
 
 ### -----------------------------------------
 
+你当前的学习目标非常明确且广泛，涵盖了解释器设计的核心知识及其在计算机科学中的更广泛背景。我们会一步步进行详细的解释，帮助你从书本内容逐渐扩展到更深层次的理解。
 
+现在让我们来详细讲解**7.3.1 检查器 (Checker)**的内容。
+
+### **类型检查器 (Type Checker) 的核心功能**
+
+类型检查器的任务是确保程序中的每个表达式在求值时都有匹配的类型。这是一种**静态检查**，它在程序执行之前检测可能的类型错误。在本节中，我们实现了一个基本的类型检查过程，通过比较两个表达式的类型来验证它们是否相等。
+
+### **1. `check-equal-type!` 过程**
+
+这个过程的功能是比较两个类型。如果它们不相等，则会报告一个错误。
+
+```scheme
+(define check-equal-type!
+  (lambda (ty1 ty2 exp)
+    (if (not (equal? ty1 ty2))
+        (report-unequal-types ty1 ty2 exp))))
+```
+
+- `ty1` 和 `ty2` 是要比较的两个类型。
+- `exp` 是引发类型不匹配的表达式，它帮助提供错误的上下文。
+
+#### **解释：**
+
+- **类型比较**：通过 `equal?` 进行类型相等性检查。如果 `ty1` 和 `ty2` 相等，表示表达式是类型安全的。否则，调用 `report-unequal-types` 来报告错误。
+- **返回值**：`check-equal-type!` 并不返回值，它是一个副作用过程，主要用于检查并在出现错误时进行处理。
+
+### **2. `report-unequal-types` 过程**
+
+当类型不匹配时，`report-unequal-types` 会生成一个错误消息，提示类型不匹配的具体信息。
+
+```scheme
+(define report-unequal-types
+  (lambda (ty1 ty2 exp)
+    (eopl:error 'check-equal-type!
+                "Types didn't match: ~s != ~a in~%~a"
+                (type-to-external-form ty1)
+                (type-to-external-form ty2)
+                exp)))
+```
+
+- **`eopl:error`**：这个过程是一个通用的错误报告机制，会生成自定义的错误信息。
+- **错误信息格式**：它以类似字符串模板的方式生成错误消息，显示了不匹配的两个类型 `ty1` 和 `ty2` 以及导致错误的表达式 `exp`。
+
+#### **解释：**
+
+- `~s` 和 `~a` 是格式化占位符，用于在错误消息中插入变量值。
+- `type-to-external-form` 将类型转换为可读的形式，以便在错误消息中显示。
+
+### **3. `type-to-external-form` 过程**
+
+这个过程将内部类型表示转换为人类可读的形式，比如将 `int-type` 显示为 `int`，将过程类型显示为箭头类型 `(arg-type -> result-type)`。
+
+```scheme
+(define type-to-external-form
+  (lambda (ty)
+    (cases type ty
+      (int-type () 'int)
+      (bool-type () 'bool)
+      (proc-type (arg-type result-type)
+        (list (type-to-external-form arg-type)
+              '-> 
+              (type-to-external-form result-type))))))
+```
+
+- **`cases` 表达式**：用于匹配类型 `ty` 的不同形式，比如 `int-type` 或 `bool-type`。
+- **箭头类型**：如果是过程类型（`proc-type`），它将参数类型和返回类型用箭头连接，表示一个过程类型，如 `(int -> bool)`。
+
+#### **解释：**
+
+- **整数类型 (int)**：如果 `ty` 是 `int-type`，它返回 `int`。
+- **布尔类型 (bool)**：如果 `ty` 是 `bool-type`，它返回 `bool`。
+- **过程类型**：如果 `ty` 是一个过程类型 `proc-type`，它递归地将参数类型和返回类型转换为外部形式，并用箭头连接。
+
+### **代码讲解：结合图中的类型检查器**
+
+我们现在已经定义了 `check-equal-type!` 和 `report-unequal-types`，它们确保在类型不匹配时报告错误。接下来我们来看如何在整个类型检查器中使用这些过程，结合 **图7.3** 来进行详细讲解。
+
+1. **类型检查器的主要任务**是遍历程序中的每个表达式，并确保每个操作符和操作数的类型匹配。在遇到变量、过程、条件分支时，类型检查器需要分别对这些表达式进行类型推导。
+
+2. **过程调用的类型匹配**：
+   - 每当一个过程被调用时，类型检查器会检查过程的参数类型是否匹配过程定义中的形参类型。
+   - 比如在 `(proc-exp var tvar body)` 中，我们需要验证调用时传入的实际参数类型和过程定义中的参数类型 `tvar` 是否一致。
+
+3. **条件表达式的类型推导**：
+   - 在 `if` 表达式中，类型检查器需要验证条件的类型为 `bool`，并确保 `then` 和 `else` 分支的返回类型一致。
+
+### **公式表示的类型推导规则**
+
+在解释器设计中，类型推导规则通常表示为推理规则 (inference rules)。例如，给定一个表达式 `e`，它的类型可以通过类型环境 $Γ$ 来推导：
+
+$$
+Γ ⊢ e : T
+$$
+
+这表示在类型环境 $Γ$ 中，表达式 $e$ 的类型是 $T$。
+
+对于 `proc` 表达式的类型推导规则，可以用如下公式表示：
+
+$$
+\frac{Γ, x:T_1 ⊢ e : T_2}{Γ ⊢ (proc\ (x:T_1)\ e) : T_1 \to T_2}
+$$
+
+这条规则表示：如果在类型环境 $Γ$ 中，`x` 的类型是 $T_1`，并且 `e` 的类型是 $T_2`，那么 `(proc (x : T_1) e)` 的类型就是 $T_1 \to T_2`。
+
+### **总结**
+
+通过 `check-equal-type!` 和 `report-unequal-types`，我们可以有效地检查类型匹配，保证程序的类型安全性。类型推导的公式表示帮助我们更好地理解类型系统在解释器中的角色。在实现类型检查器时，关键是对表达式的每个部分进行递归检查，并确保类型一致。
+
+接下来，如果你有其他具体的章节或内容提供，我会继续为你详细讲解。
 
 ### -----------------------------------------
 
